0.5.1
Done DanD on docs.
Fixed minor visual problem with pole.
Removed setting for path to qt docs, now only set in prefs.
Removed setting path to gsu from configure, now only set in prefs.
Done tool save as.
Done delete tool.
Code clean.
Fixed not saving correct flags for tool.
Done save tool.
Fixed enabling tool options.
Done update tools window when switching tools.
Disabled save session menu if no tabs open.
Added sort tool.
Added verify tool.
Clean tool constants.
Started tools.
Added KKEditClassTools.cpp
Started tools.
Set/get menuitem string now static string.
Added get current line number to QT_document.
Fixed saving current line in save session.
Done sessions.
Fixed blank label in bm menu if bookmarking empty line.
Sorce tree clean up.

0.5.0
Done saving find/replace history.
Done search definition dialog.
Redone open include.
Done find definition in multiple files.
Redone functions menu.
Fixed default shortcuts.
Done toolbar search for api.
Done toolbar search for qt5.
Done toolbar search for gtk.
Done toolbar sensitivity.
Done keyboard shortcuts.
Started app key shortcuts.
Done toggle lock contents.
Done show all tabs.
Done hide tab.
Done tab context open file from here.
Done tab context set src hilite.
Fixed saving size and position of app on exit.
Removed old spell check src's.
Done spell check.
Added icons to tab context menu.
Done copy filepath/dirpath/filename.
Started tab context menu.
Done select tab.
Done sort tabs.
Fixed double ask save file.
Done find/find next/find replace.
Done saving files and quit.
Done quit.
Done revert.
Done save all.
Done close tab.
Done saveas.
done switch tab.
Done Save all.
Done build/show documentation.
Code clean.
Fixed doxyfile.
Fixed header sysntax hiliting.
Done barber pole dialog.
Done external editrors.
Done save.
Change tab on new etc.
Fixed new file.
code clean.
temp move to local svn.
Moving prefs.
Done view menu.
Done edit menu.
Done filemenu.
Re-writing menu/toolbar system.
Done single instance.