@@ -1,5 +1,5 @@
 
-dand on toolbar/window
+remove bm from closed tab
 search forward/back checkbox
 history
 recent
